entity_macros/tests/ui/derive/ent/unexpected-inner-lit-attr-for-ent-field.stderr
error: Lit is not supported at my_field/field
 --> $DIR/unexpected-inner-lit-attr-for-ent-field.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
